Editor can insert but while trying to remove the default <div> tags, some random symbol appears before the text; Issue - Scrollbar is missing for some reason

--- a/WikiWikiWeb/web/index.css
+++ b/WikiWikiWeb/web/index.css
@@ -36,7 +36,9 @@ body {
     transform: translate3d(-50%, -50%, 0);
 }
 
-#invalidCreds, #invalidPassword, #invalidUsername, #errorMessageUserName, #logout, #newUser {
+#invalidCreds, #invalidPassword,
+#invalidUsername, #errorMessageUserName,
+#logout, #newUser, #createSuccess {
     list-style: none;
     display: none;
 }
